--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,14 +10,18 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            background-image: url('https://images.pexels.com/photos/2693529/pexels-photo-2693529.jpeg');
             background-size: cover;
-            background-position: center;
             color: white;
+            user-select: none; /* Prevent text selection */
         }
+        
         .container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
+            align-items: center;
+            justify-content: center;
             background-color: rgba(28, 32, 48, 0.85); /* Semi-transparent background for readability */
             border-radius: 10px;
             box-shadow: 0px 0px 15px 5px rgba(0, 140, 255, 0.75);
@@ -45,13 +50,33 @@
             margin-bottom: 25px;
             color: #ccd6f6;
         }
+       /* Rules Button Styles */
+       .rules-btn {
+        display: inline-block;
+            position: absolute;
+            bottom:155px;
+            left: 60px; /* Positioning to the left within the container */
+            padding: 9px 10px;
+            font-size: 10px;
+            color: #fff;
+            background: linear-gradient(to right, #ff4d4d, #ff1a1a); /* Gradient red background */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            box-shadow: 0 0 10px rgba(255, 77, 77, 0.8);
+            z-index: 999; /* Ensure it's above other elements */
+        }
+        .rules-btn:hover {
+            background: linear-gradient(to right, #ff1a1a, #cc0000); /* Darker gradient on hover */
+        }
         .btn {
             display: inline-block;
             padding: 10px 20px;
             font-size: 18px;
             color: #fff;
-            background-color: #007bff;
-            border: 2px solid #00c6ff; /* Customized border */
+            background-color: #de08d7d8;
+            border: 2px solid #0d9b1e; /* Customized border */
             border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s ease;
@@ -95,31 +120,23 @@
             }, 2000); // Simulate a loading time before navigating
         }
 
-        function setRandomBackground() {
-            const images = [
-                'https://source.unsplash.com/1600x900/?technology',
-                'https://source.unsplash.com/1600x900/?education',
-                'https://source.unsplash.com/1600x900/?science',
-                'https://source.unsplash.com/1600x900/?innovation',
-                'https://source.unsplash.com/1600x900/?learning'
-            ];
-            const randomImage = images[Math.floor(Math.random() * images.length)];
-            document.body.style.backgroundImage = `url(${randomImage})`;
-        }
-        
-        document.addEventListener('DOMContentLoaded', setRandomBackground);
     </script>
 </head>
 <body>
     <div class="container">
-        <h1>STEM ELITES CLUB</h1>
-        <h2>QUIZ COMPETITION (Grades 6-11)</h2>
-        <p>Welcome to the STEM Elites Club's Quiz Competition. You are about to embark on a journey through exciting and challenging questions designed to test your knowledge.</p>
-        <p>Click the button below to begin the quiz. Good luck!</p>
+        <h1>CAPTURE THE FLAG RACE</h1>
+        <h2>Organized By STEM ELITES CLUB</h2>
+       <h3>Welcome to the CTF Race!</h3> 
+                         <p><b>We are thrilled to have you here for an exciting race where your knowledge will be put to the test.
+             In this race, you'll be working through a series of levels, solving questions and collecting passwords.</b></p>
+
+        <p><b>Click the button below to begin the quiz. Good luck!</b></p>
         <button class="btn" id="startButton" onclick="startChallenge()">
             <span class="btn-text" id="buttonText">Begin the Quiz</span>
             <div class="loading-bar" id="loadingBar"></div>
         </button>
     </div>
+    <button class="rules-btn" onclick="window.location.href='rules.html'">See Rules</button>
+
 </body>
 </html>
