--- a/level2.html
+++ b/level2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,24 +24,12 @@
             box-shadow: 0px 0px 15px 5px rgba(0, 140, 255, 0.75);
             text-align: center;
             border: 1px solid #007bff;
-            position: relative;
-        }
-        .scoreboard {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px;
-            background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-            border-radius: 8px;
-            box-shadow: 0 0 15px 5px rgba(255, 237, 131, 0.8);
-            color: #fff;
-            text-align: center;
-            font-size: 16px;
+            position: relative; /* Added to position children absolutely */
         }
         .timer {
             position: absolute;
             top: 20px;
-            left: 20px;
+            right: 20px;
             padding: 10px;
             background: linear-gradient(to right, #f12711, #f5af19);
             border-radius: 8px;
@@ -59,13 +48,12 @@
         }
         h3 {
             margin: 0;
-            font-size: 18px;
+            font-size: 15px;
         }
-        .puzzle {
-            font-size: 18px;
+        .password-container {
             margin-bottom: 20px;
         }
-        input[type="text"] {
+        input[type="text"], input[type="password"] {
             padding: 10px;
             border: 2px solid #00c6ff;
             border-radius: 5px;
@@ -111,6 +99,11 @@
             margin-top: 20px; /* Added margin */
             animation: shine 2s infinite; /* Added shining effect */
         }
+        .next-level-btn:hover {
+            background-color: #06c435;
+            border-color: #23ec66;
+            box-shadow: 0 0 15px #ffec83;
+        }
         @keyframes shine {
             0% {
                 box-shadow: 0 0 15px rgba(76, 175, 80, 0.8);
@@ -122,15 +115,14 @@
                 box-shadow: 0 0 15px rgba(76, 175, 80, 0.8);
             }
         }
-        /* Skip Button Styles */
         .skip-btn {
             position: absolute;
             bottom: 20px;
-            left: 20px;
+            left: 20px; /* Positioning to the left within the container */
             padding: 5px 10px;
             font-size: 14px;
             color: #fff;
-            background-color: #ff4d4d; /* Red background */
+            background: linear-gradient(to right, #ff4d4d, #ff1a1a); /* Gradient red background */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -139,9 +131,8 @@
             z-index: 999; /* Ensure it's above other elements */
         }
         .skip-btn:hover {
-            background-color: #ff1a1a; /* Darker red on hover */
+            background: linear-gradient(to right, #ff1a1a, #cc0000); /* Darker gradient on hover */
         }
-        /* Skip Button Warning Styles */
         .skip-warning {
             position: absolute;
             bottom: 50px;
@@ -155,7 +146,6 @@
             z-index: 999; /* Ensure it's above other elements */
             display: none; /* Initially hidden */
         }
-        /* Skip Button Warning Styles - Animation */
         @keyframes slideIn {
             0% {
                 transform: translate(-50%, 100%);
@@ -164,114 +154,142 @@
                 transform: translate(-50%, 0);
             }
         }
+        .copied-notification {
+            display: none;
+            color: yellow;
+            margin-top: 10px;
+            animation: fadeOut 2s forwards;
+        }
+        @keyframes fadeOut {
+            0% { opacity: 1; }
+            100% { opacity: 0; }
+        }
     </style>
 </head>
 <body oncopy="return false" onpaste="return false" oncut="return false">
     <div class="container">
-        <div class="scoreboard">
-            <h3>Score: <span id="score">0</span></h3>
-        </div>
         <div class="timer">
             <h3>Time Left: <span id="timer">02:00</span></h3>
         </div>
-        <h1>STEM ELITES CLUB</h1>
+        <h1>CAPTURE THE FLAG</h1>
         <h2>Level 2</h2>
-        <div id="password-section">
-            <p class="puzzle">Enter the password received from the previous level to unlock the puzzle:</p>
-            <input type="text" id="passwordInput" placeholder="Enter password" onkeypress="if(event.keyCode == 13) {checkPassword();}">
-            <button class="btn" onclick="checkPassword()">Submit</button>
-            <div class="message" id="passwordMessage"></div>
+        <p id="passwordMessage">Enter the password obtained from previous level to unlock the new question.</p>
+        <div id="passwordContainer" class="password-container">
+            <input type="password" id="passwordInput" placeholder="Enter the password" onkeypress="if(event.keyCode == 13) {checkPassword();}">
+            <button class="btn" onclick="checkPassword()">Submit Password</button>
         </div>
-        <div id="puzzle-section" style="display:none;">
-            <p class="puzzle">What is the largest planet in our solar system?</p>
+        <div id="questionContainer" style="display: none;">
+            <p class="puzzle">What is the square root of 144?</p>
             <div>
                 <input type="text" id="answerInput" placeholder="Enter your answer" onkeypress="if(event.keyCode == 13) {checkAnswer();}">
                 <button class="btn" onclick="checkAnswer()">Submit</button>
             </div>
-            <div class="message" id="message"></div>
-            <button class="next-level-btn" onclick="window.location.href='level3.html'">Proceed to Next Level</button>
         </div>
+        <div class="message" id="message"></div>
+        <div class="copied-notification" id="copiedNotification">Password copied to clipboard!</div>
+        <button class="next-level-btn" onclick="proceedToNextLevel()">Proceed to Next Level</button>
         <!-- Skip Button -->
-        <button class="skip-btn" onclick="showSkipWarning()">Skip (<span id="skipCount">3</span>)</button>
+        <button class="skip-btn" onclick="showSkipWarning()">Skip (3)</button>
         <!-- Skip Warning Message -->
         <div class="skip-warning" id="skipWarning">
-            Are you sure to skip the level?
+            Are you sure you want to skip this level? 
             <button onclick="hideSkipWarning()">No</button>
             <button onclick="skipLevel()">Yes, Skip</button>
         </div>
     </div>
     <script>
-        let score = parseInt(localStorage.getItem('score')) || 0;
-        let skipsLeft = parseInt(localStorage.getItem('skipsLeft')) || 3; // Initial number of skips
-        let timeLeft = 120; // 2 minutes
-        let timerPaused = true; // To keep track of whether the timer is paused
-        let incorrectAttempts = 0; // Initialize incorrect attempts
+        let score = 0;
+        let skipsLeft = 3; // Number of skips allowed
+        let hasEnteredPassword = false;
+        let timeLeft = 120; // 2 minutes in seconds
+        const level2Password = 'level2pass'; // Password from Level 1
+        const level3Password = 'openlev3'; // Example password for the next level
 
-        document.getElementById("score").innerText = score;
-        document.getElementById("skipCount").innerText = skipsLeft;
-
-        function startTimer() {
-            if (!timerPaused) { // Only start if the timer is not paused
-                const timerInterval = setInterval(() => {
-                    if (timeLeft <= 0) {
-                        clearInterval(timerInterval);
-                        updateScore(-5); // Deduct 5 points if time runs out
-                        proceedToNextLevel();
-                    } else {
-                        timeLeft--;
-                        updateTimerDisplay();
-                    }
-                }, 1000);
+        document.addEventListener('DOMContentLoaded', () => {
+            skipsLeft = parseInt(localStorage.getItem('skipsLeft')) || 3;
+            updateSkipButtonText();
+            
+            const bypass = localStorage.getItem('bypassLevel2');
+            if (bypass === 'true') {
+                document.getElementById('passwordContainer').style.display = 'none';
+                document.getElementById('questionContainer').style.display = 'block';
+                document.getElementById('passwordMessage').innerHTML = "<span style='color: yellow;'>Your password is automatically bypassed.</span>";
+                startTimer();
             }
+        });
+
+        function checkPassword() {
+            const userPassword = document.getElementById("passwordInput").value.trim();
+            if (userPassword === level2Password) {
+                document.getElementById("passwordContainer").style.display = 'none';
+                document.getElementById("questionContainer").style.display = 'block';
+                document.getElementById('passwordMessage').innerText = "Correct Password. Proceed with the question.";
+                hasEnteredPassword = true;
+                localStorage.removeItem('bypassLevel2'); // Clear the bypass flag if password is entered correctly
+                setupPasswordCopy();
+                startTimer(); // Start the timer when password is correct and question is displayed
+            } else {
+                document.getElementById("message").innerHTML = "<span style='color: red;'>Incorrect password. Try again.</span>";
+            }
+        }
+
+        function checkAnswer() {
+            const userAnswer = document.getElementById("answerInput").value.trim();
+            const correctAnswer = "12"; // Adjust based on actual answer
+            if (userAnswer === correctAnswer) {
+                document.getElementById("message").innerHTML = `<span style='color: green;'>Correct! Your password for the next level is: <span id="password">${level3Password}</span></span>`;
+                document.querySelector('.next-level-btn').style.display = 'block'; // Show next level button
+                updateScore(10);
+                document.getElementById("answerInput").value = ""; // Clear input field after correct answer
+            } else {
+                document.getElementById("message").innerHTML = "<span style='color: red;'>Incorrect. Try again.</span>";
+            }
+        }
+
+        async function copyToClipboard(text) {
+            try {
+                await navigator.clipboard.writeText(text);
+                showCopiedNotification();
+            } catch (err) {
+                console.error('Failed to copy: ', err);
+            }
+        }
+
+        function setupPasswordCopy() {
+            const passwordSpan = document.getElementById("password");
+            passwordSpan.style.userSelect = "text";
+            passwordSpan.style.cursor = "pointer";
+            passwordSpan.addEventListener("click", () => {
+                copyToClipboard(passwordSpan.textContent);
+            });
+        }
+
+        function showCopiedNotification() {
+            const notification = document.getElementById("copiedNotification");
+            notification.style.display = "block";
+            setTimeout(() => {
+                notification.style.display = "none";
+            }, 2000);
+        }
+
+        // Timer function
+        function startTimer() {
+            const timerInterval = setInterval(() => {
+                if (timeLeft <= 0) {
+                    clearInterval(timerInterval);
+                    updateScore(-3); // Deduct 3 points if time runs out
+                    proceedToNextLevel();
+                } else {
+                    timeLeft--;
+                    updateTimerDisplay();
+                }
+            }, 1000);
         }
 
         function updateTimerDisplay() {
             const minutes = Math.floor(timeLeft / 60);
             const seconds = timeLeft % 60;
             document.getElementById("timer").innerText = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
-        }
-
-        function checkPassword() {
-            const enteredPassword = document.getElementById("passwordInput").value.trim();
-            const correctPassword = "level2Pass1234"; // Replace with the actual constant password
-
-            if (enteredPassword === correctPassword) {
-                document.getElementById("password-section").style.display = 'none';
-                document.getElementById("puzzle-section").style.display = 'block';
-                document.getElementById("passwordMessage").innerHTML = "<span style='color: green;'>Password correct! Unlocking the puzzle...</span>";
-
-                // Reset and start the timer
-                timeLeft = 120; // Reset timer to 2 minutes
-                updateTimerDisplay();
-                timerPaused = false; // Unpause the timer
-                startTimer();
-            } else {
-                document.getElementById("passwordMessage").innerHTML = "<span style='color: red;'>Incorrect password. Try again.</span>";
-            }
-        }
-
-        function checkAnswer() {
-            const userAnswer = document.getElementById("answerInput").value.trim();
-            const correctAnswer = "Jupiter"; // Replace with the actual answer
-
-            if (userAnswer === correctAnswer) {
-                document.getElementById("message").innerHTML = "<span style='color: green;'>Correct! Your password for the next level is: constantPassword</span>";
-                document.querySelector('.next-level-btn').style.display = 'block'; // Show next level button
-                updateScore(8); // Assuming the user gets 8 points for this level
-                document.getElementById("answerInput").value = ""; // Clear input field after correct answer
-            } else {
-                document.getElementById("message").innerHTML = "<span style='color: red;'>Incorrect. Try again.</span>";
-                incorrectAttempts++;
-                if (incorrectAttempts % 3 === 0) {
-                    updateScore(-2); // Deduct 2 points for every third incorrect attempt
-                }
-            }
-        }
-
-        function updateScore(points) {
-            score += points;
-            document.getElementById("score").innerText = score;
-            localStorage.setItem('score', score); // Save updated score to local storage
         }
 
         // Skip Level Functions
@@ -287,8 +305,8 @@
             if (skipsLeft > 0) {
                 skipsLeft--;
                 localStorage.setItem('skipsLeft', skipsLeft); // Save skips left to local storage
-                document.getElementById("skipCount").innerText = skipsLeft;
-                updateScore(-5); // Deduct 5 points when skipping
+                updateSkipButtonText();
+                localStorage.setItem('bypassLevel2', 'true'); // Set bypass flag in local storage
                 proceedToNextLevel();
             } else {
                 alert('You have no skips left.');
@@ -299,13 +317,54 @@
             window.location.href = 'level3.html'; // Change URL accordingly
         }
 
-        // Initially update skip button text
-        document.getElementById("skipCount").innerText = skipsLeft;
-
-        // Start the timer on page load if not paused
-        if (!timerPaused) {
-            startTimer();
+        // Update skip button text with remaining skips
+        function updateSkipButtonText() {
+            document.querySelector('.skip-btn').innerText = `Skip (${skipsLeft})`;
+            if (skipsLeft <= 0) {
+                document.querySelector('.skip-btn').style.display = 'none'; // Hide the skip button if no skips left
+            }
         }
+
+        // Initially update skip button text
+        updateSkipButtonText();
     </script>
+<!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
 </body>
 </html>
